# STXS1p3-categorizer

./: .gitignore  CMakeLists.txt  flake.nix  main.cpp  package.nix  shell.nix
Analyze/python/: DataCards.py  SetupPlots.py  SummaryPlot.py  UtilFunctions.py
Analyze/scripts/: run_counting.py
Categorize/: BuildFile.xml  CMakeLists.txt  package.nix
Categorize/interface/: STXS_categorization1p2.h  STXS_categorization1p3.h
Categorize/src/: Discriminants.cc  Preprocess.cpp  STXS_categorization0.cpp  STXS_categorization1p2.cpp  STXS_categorization1p3.cpp  STXS_common.cpp  cConstants.cc  parseArgs.cpp
CategorizeBDT/: CMakeLists.txt  package.nix
CategorizeBDT/interface/: TrainConfig.h
CategorizeBDT/src/: AutomaticClassifier.cpp  Train2jHadParams.cpp  TrainConfig.cpp  TrainStep1p2.cpp  parseArgs.cpp  parseArgsTrain.cpp
CategorizeBDT/src/config/: Categories.h  Parameters.h  Variables.h
CommonUtils/: CMakeLists.txt
CommonUtils/interface/: STXS_Categories.h  STXS_common.h
CommonUtils/src/: Preprocess.cpp  STXS_Categories.cpp  STXS_common.cpp
interface/: STXS_common.h
src/: Preprocess.cpp  STXS_Filter.cpp  STXS_categorization0.cpp  STXS_categorization1p2.cpp  STXS_categorization1p3.cpp  STXS_common.cpp
